# SDL2_Breakout

./: .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/include/core/: game.h  input.h  timing.h  window.h
engine/include/entity/: ball_entity.h  block_entity.h  entity.h  paddle_entity.h
engine/include/graphics/: object2d.h
engine/include/graphics/image/: animated_image.h  image.h  text_image.h
engine/include/math/: vector.h
engine/include/ui/button/: button.h
engine/src/core/: game.cpp  input.cpp  timing.cpp  window.cpp
engine/src/entity/: ball_entity.cpp  block_entity.cpp  entity.cpp  paddle_entity.cpp
engine/src/graphics/: object2d.cpp
engine/src/graphics/image/: animated_image.cpp  image.cpp  text_image.cpp
engine/src/ui/button/: button.cpp
game/: CMakeLists.txt
game/src/: main.cpp
include/: commons.h  consts.h  game.h  image.h  software_image.h  vector.h
src/: game.cpp  image.cpp  main.cpp  software_image.cpp
